Build Agami-v1.0.0